--- a/.github/workflows/img-magic.yml
+++ b/.github/workflows/img-magic.yml
@@ -1,8 +1,12 @@
 on:
-  push:
+  pull_request:
     branches:
       - main
-
+    paths:
+      - '**.jpg'
+      - '**.jpeg'
+      - '**.png'
+      - '**.gif'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,6 +18,6 @@ jobs:
           command: mogrify -path imgs/ -auto-orient -resize x500 imgs/*.*
       - uses: cmgriffing/scully-gh-pages-action@v9
         with:
-          access-token: ${{ secrets.ACCESS_TOKEN }}
+          access-token: ${{ secrets.GITHUB_TOKEN }}
           deploy-branch: main
           build-args: --base-href /
